<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lorenter.jardinparis.controleur.MainActivity">

    <TextView
        android:id="@+id/Texte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue"
        android:textSize="25dp"
        android:padding="23dp"
        android:layout_gravity="center"/>


    <Button
        android:id="@+id/luxembourg"
        android:layout_width="wrap_content"
        android:layout_height="87dp"
        android:background="@drawable/bakluxembourg"
        android:padding="25dp"
        android:text="@string/pluxembourg"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <Button
        android:id="@+id/chaumont"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:background="@drawable/bakchaumont"
        android:padding="25dp"
        android:text="@string/pchaumont"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <Button
        android:id="@+id/bercy"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:background="@drawable/bakbercy"
        android:padding="25dp"
        android:text="@string/pbercy"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <Button
        android:id="@+id/monsouris"
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:background="@drawable/bakmontsouris"
        android:padding="25dp"
        android:text="@string/pmonsouris"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <Button
        android:id="@+id/tuilerie"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:background="@drawable/baktuileries"
        android:padding="25dp"
        android:text="@string/ptuileries"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />



</LinearLayout>
